commit on 'main'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="#contact">Contact</a>
     </nav>
     <div class="content-wrap">
-      <img class="profile-img col-narrow" src="../static/Misbahuddin Mohammed.jpg" alt="Misbahuddin Mohammed">
+      <img class="profile-img col-narrow" src="static/Misbahuddin Mohammed.jpg" alt="Misbahuddin Mohammed">
       <div class="col-wide">
         <h1>Misbahuddin Mohammed</h1>
         <h2>Electrical Engineer</h2>
