commit on 'main'

--- a/index.html
+++ b/index.html
@@ -92,6 +92,28 @@
 
         <!-- Job 3 Details -->
         <div class="col-narrow">
+          <h3>TATA POWER SKILL DEVELOPMENT INSTITUTE - Jojobera</h3>
+          <p class="uppercase">Trainee</p>
+          <p>15th February 2022 - 21th February 2022</p>
+        </div>
+        <div class="col-wide job-description">
+          <p>I have undergone a training conducted by Tata Power Skill Development Institute(TPSDI) which focused Industrial Training.</p>
+          <p>I have also gone through the course Module:3 - "Best O & M Practices for Motors & Transformers.</p>
+          <p>Key Points:</p>
+          <ul>
+              <li>AC Distribution System.</li>
+              <li>DC Distribution System.</li>
+              <li>Consumer Substations.</li>
+              <li>AC-DC Testing.</li>
+              <li>Circuit Breaker.</li>
+              <li>transformer & Accessories.</li>
+              <li>Working Principles of Motor.</li>
+              <li>Parts of Motor.</li>
+          </ul>
+        </div>
+
+        <!-- Job 4 Details -->
+        <div class="col-narrow">
           <h3>Python Basics and Beyond - Nullstack Technologies pvt. limited.</h3>
           <p class="uppercase">Trainee</p>
           <p>27th November 2021 - 12th January 2022</p>
