commit on 'main'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Misbahuddin Mohammed</h1>
         <h2>Electrical Engineer</h2>
         <p>Hello there! My name is Misbahuddin Mohammed and I love Photography and listening to songs is my hobby and I am also deeply attached to the sports,cricket,football.These are the somethings which are my other than the usual skills.</p>
-        <br>
+        <p></p>
         <p>My goal is to work in a professional environment where I can enrich my skills and efficiency, and to work towards achieving the organizational goal.</p>
       </div>
     </div>
@@ -64,12 +64,9 @@
             <li>Studied about Star and Delta connections.</li>
             <li>Brief idea about the circuits and the wiring.</li>
             <li>Different types of wiring i.e., the phase line,neutral line,earth line.</li>
-            <li>Developing unit tests, browser and device testing.</li>
-            <li>Strong understanding of GIT.</li>
-            <li>Troubleshoot and Debug Issues.</li>
           </ul>
           </p>
-          <p>See more at <a href="https://www.linkedin.com/in/priyanga-vanangamudi-89b21a89" target="_blank">linkedin</a>.</p>
+          <p>See my complete achievements on <a href="https://www.linkedin.com/in/misbahuddin-mohammed-0094a7204/" target="_blank">linkedin</a>.</p>
         </div>
 
         <!-- Job 2 Details -->
@@ -88,6 +85,8 @@
               <li>Known about distribution i.e., SLD, HT, Distribution transformer like power transformer.</li>
               <li>Different types of transformer that are Dry type transformer, Auto transformer, etc.</li>
           </ul>
+          <p>
+          <p>See my complete achievements on <a href="https://www.linkedin.com/in/misbahuddin-mohammed-0094a7204/" target="_blank">linkedin</a>.</p>
         </div>
 
         <!-- Job 3 Details -->
@@ -110,6 +109,8 @@
               <li>Working Principles of Motor.</li>
               <li>Parts of Motor.</li>
           </ul>
+          <p>
+          <p>See my complete achievements on <a href="https://www.linkedin.com/in/misbahuddin-mohammed-0094a7204/" target="_blank">linkedin</a>.</p>
         </div>
 
         <!-- Job 4 Details -->
@@ -120,17 +121,14 @@
         </div>
 
         <div class="col-wide job-description">
-          <p>Learnt how to code the basics in Python coding Language.Learnt how to use platforms like Django and Vs Code. Learnt also a bit of HTML and CSS.The final project being this resume which I am presenting here.</p>
+          <p>It is a course that acts on an introduction of Python and its basics and beyond.</p>
           <p>Key Points:</p>
           <ul>
-              <li>Worked on projects focusing on HTML, CSS, JavaScript, jQuery and AJAX.</li>
-              <li>Have an experience in dealing with events such as drag and drop and keyboard events.</li>
-              <li>Tried creating a web-application in Angular JS(1.x). Have a basic and practical experience in Angular JS components, modules, app structures, binding properties and Typescript as well.</li>
-              <li>Built a library system. Simulated the real library concept in this project. It gives the feasibility to the user to select and read the books that they like. It can be instantly access from anywhere with the help of internet. Inspired by libraries on the cloud.</li>
-              <li>Worked on Bootstrap for theming and CSS.</li>
+              <li>Learnt how to code the basics in Python coding Language.</li>
+              <li>Learnt how to use platforms like Django and Vs Code.</li>
+              <li>Learnt also a bit of HTML and CSS.</li>
+              <li>The final project being this resume which I am presenting here.</li>
           </ul>
-
-          <p>See my complete work history and acheivements on <a href="https://www.linkedin.com/in/priyanga-vanangamudi-89b21a89" target="_blank">LinkedIn</a>.</p>
         </div>
       </div>
     </section>
@@ -142,7 +140,7 @@
                 <h3>Languages Known:</h3>
               </div>
               <div class="col-wide job-description">
-                <p>English,Hindi,Bengali</p>
+                <p>English, Hindi, Bengali</p>
               </div>
               <div class="col-narrow">
                 <h3>Programming Languages Known:</h3>
