commit on 'main'

--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@
         <h3>St. Thomas' College of Engineering and Technology</h3>
         <p>Bachelor's in Electrical Engineering</p>
         <p>2019-2023</p>
+        <p>SGPA of 1st Sem = 7.00</p>
+        <p>SGPA of 2nd Sem = 9.46</p>
+        <p>SGPA of 3rd Sem = 9.23</p>
+        <p>SGPA of 4th Sem = 9.53</p>
+        <p>SGPA of 5th Sem = 9.41</p>
         <br>
         <p>This college has taught me diligence,patience,punctuality ,time management along with imparting knowledge about the subject,I have taken. Panic and time management was imposed on me to handle any siutation like deadlines efectively,without losing my grip!</p>
 
@@ -197,6 +202,7 @@
         <h3>Holy Rock School</h3>
         <p>Science</p>
         <p>2017-2019</p>
+        <p>Percentage = 69%</p>
         <br>
         <p>ISC</p>
 
@@ -204,6 +210,7 @@
         <h3>St. Xavier's School</h3>
 
         <p>2006-2017</p>
+        <p>Percentge = 73%</p>
         <br>
         <p>ICSE</p>
 
