--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- // Intro -->
   <header id="about">
-    <a href="https://drive.google.com/drive/my-drive" download="misbahuddin-mohammed" target="_blank" download class="btn download">Download PDF</a>
+    <a href="https://drive.google.com/file/d/1bzkD2NWBCMRZ8uTzwsv9vyFlrte7JXOU/view?usp=sharing" download="misbahuddin-mohammed" target="_blank" download class="btn download">Download PDF</a>
             </div>
     <nav>
       <a href="#about">About</a>
